# odezhdabot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  MIGRATION_007_INSTRUCTIONS.md  Makefile  QUICK_START.md  README.md  SETUP_FORUM.md  add_media_fields.sql  alembic.ini  docker-migrate.sh  migrate.sh  pyproject.toml
docker/: Dockerfile  apply-migrations.sh  docker-compose.yml  init-db.sql  quick-fix-migrations.sh
docs/: BROADCAST_SYSTEM.md  CODE_STYLE.md  DATABASE_ARCHITECTURE.md  FORUM_TOPICS.md  GETTING_STARTED.md  MONITORING_AND_ALERTS.md  NAVIGATION.md  ORDER_SYSTEM.md  PRODUCTION_CHECKLIST.md
migrations/: 001_update_broadcasts_table.sql  002_add_last_active_at_to_users.sql  003_add_performance_indexes.sql  MIGRATION_GUIDE.md  README.md  env.py
migrations/versions/: 2026_01_17_1700-001_initial_database_schema.py  2026_01_23_0800-002_add_product_colors_fit_media.py  2026_01_24_1200-003_refactor_orders_to_order_items.py  2026_01_25_0000-004_add_order_messages_and_payment_settings.py  2026_01_25_0100-005_add_bonus_system.py  2026_01_25_0200-006_add_bot_settings.py  2026_01_26_0000-007_add_media_to_bot_messages.py  2026_01_27_0000-008_add_bonus_discount_to_orders.py
scripts/: update_admin_roles.py
src/: __main__.py  main.py
src/bot/filters/: admin.py  role.py
src/bot/handlers/: __init__.py  common.py
src/bot/keyboards/: broadcast.py  (+9 more)
src/core/: config.py  constants.py  logging.py
src/database/: base.py
src/services/: bonus_service.py  broadcast_service.py  cart_service.py  forum_service.py  moderation_service.py  monitoring_service.py  notification_service.py  order_service.py  product_service.py  user_service.py
src/utils/: alerts.py  broadcast_sender.py  cancel_handler.py  error_handler.py  excel_parser.py  formatters.py  navigation.py  text_analyzer.py
tests/: test_formatters.py
(+69 files in other folders)
